Added Ad script

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
     <!-- ✅ Ad script added here -->
     <script type='text/javascript' src='//pl28006625.effectivegatecpm.com/e5/4f/12/e54f1284f962970e322515c357532701.js'></script>
-
+    <script type='text/javascript' src='//pl28006625.effectivegatecpm.com/e5/4f/12/e54f1284f962970e322515c357532701.js'></script>
 </body>
 </html>
