Added Ad script

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script type="module" src="/index.tsx"></script>
 
     <!-- ✅ Ad script added here -->
+     <script async="async" data-cfasync="false" src="//pl28006791.effectivegatecpm.com/989699fc2a0b17118a44048dabb7bb76/invoke.js"></script>
+<div id="container-989699fc2a0b17118a44048dabb7bb76"></div>
     <script type='text/javascript' src='//pl28006625.effectivegatecpm.com/e5/4f/12/e54f1284f962970e322515c357532701.js'></script>
     <script type='text/javascript' src='//pl28006625.effectivegatecpm.com/e5/4f/12/e54f1284f962970e322515c357532701.js'></script>
 </body>
